--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="etUname">@username</string>
     <string name="username">@</string>
     <string name="seeScore">See Your Detailed Score</string>
+    <string name="startQuiz">Start Quiz</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
