--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Quizmasters</string>
-    <string name="tvUname">Enter a Username</string>
-    <string name="etUname">@username</string>
-    <string name="username">@</string>
+    <string name="textViewUsername">Enter a Username</string>
+    <string name="username">Username</string>
     <string name="seeScore">See Your Detailed Score</string>
     <string name="startQuiz">Start Quiz</string>
+    <string name="next">Next</string>
+    <string name="lastScores">SCORES</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
