--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quizmasters</string>
+    <string name="app_name">MovieGeeks</string>
     <string name="textViewUsername">Enter a Username</string>
     <string name="username">Username</string>
     <string name="seeScore">See Your Detailed Score</string>
